# FastAPI-Demo

./: .gitignore  README.md  pyproject.toml
src/: main_minimal.py  main_pydantic.py  main_response.py  main_validate.py
src/models/: main_models.py
