[project]
name = "fastapi example code"
version = "0.1.0"
description = "FastAPI example code for the course"
authors = [
    {name = "Luis Rodriguez",email = "lrodriguez172@slb.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.124.0,<0.125.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
